--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "production grade backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "Anuj Gupta",
   "license": "ISC"
