--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "dev": "nodemon src/index.js"
   },
   "author": "Anuj Gupta",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.3.3"
+  }
 }
