--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "ybackend",
   "version": "1.0.0",
   "description": "production grade backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "Anuj Gupta",
   "license": "ISC",
   "devDependencies": {
     "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongoose": "^8.6.2"
   }
 }
